RESOLVED FIXED314523
Justification expansion is not applied around CJK Unified Ideographs Extensions E, F, G, H, and I
https://bugs.webkit.org/show_bug.cgi?id=314523
Summary Justification expansion is not applied around CJK Unified Ideographs Extensio...
Ahmad Saleem
Reported 2026-05-10 21:12:12 PDT
ssia - it is just something I am trying to see, if it progress web content.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-10 21:12:19 PDT
Ahmad Saleem
Comment 2 2026-05-10 21:13:49 PDT
EWS
Comment 3 2026-05-20 11:13:06 PDT
Committed 313586@main (1d39cc4016fd): <https://commits.webkit.org/313586@main> Reviewed commits have been landed. Closing PR #64650 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.